* Fixed detail page overflow issue

--- a/zitaola/css/style.css
+++ b/zitaola/css/style.css
@@ -2574,10 +2574,9 @@ button.inlineButton {
   width: 100%;
   height: 100%;
   padding: 3px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
   background: #fff
-  overflow-y: hidden;
 }
 #productDetail.viewProductLanding {
   position: relative;
